<resources>
    <string name="app_name">Mudra</string>
    <string name="app_name1">TPWODLeCollectionOffline</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_col_dashboard">ColDashboard</string>
    <string name="title_activity_ac_collection">AcCollection</string>
    <string name="title_activity_oth_collection">OthCollection</string>
    <string name="title_activity_ac_collectionnew">AcCollectionnew</string>
    <string name="title_activity_account_info">AccountInfo</string>
    <string name="title_activity_collection_dash_board">CollectionDashBoard</string>
    <string name="title_activity_coll_report">CollReportActivity</string>
    <string name="title_activity_coll_upload_menu">CollUploadMenuActivity</string>
    <string name="title_activity_coll_download_menu">CollDownloadMenuActivity</string>
    <string name="title_activity_coll_setup_menu">CollSetupMenuActivity</string>
    <string name="title_activity_coll_utilities">CollUtilitiesActivity</string>
    <string name="title_activity_cons_not_found">ConsNotFound</string>
    <string name="title_activity_pay_summary">PaySummary</string>
    <string name="title_activity_summary_dtl">SummaryDtl</string>
    <string name="title_activity_calender_view_p">CalenderViewP</string>
    <string name="title_activity_print_recpt">PrintRecpt</string>
    <string name="title_activity_receipt_gen">ReceiptGen</string>
    <string name="title_activity_duplicate_summary">DuplicateSummary</string>
    <string name="title_activity_report_print">ReportPrint</string>
    <string name="title_activity_pay_summary_non_acnt">PaySummaryNonAcnt</string>
    <string name="title_activity_sum_dtl_non_acnt">SumDtlNonAcnt</string>
    <string name="title_activity_account_infor_non">AccountInforNonAc</string>
    <string name="title_activity_duplicate_receipt">DuplicateReceipt</string>
    <string name="title_activity_receipt_gen_duplicate">ReceiptGenDuplicate</string>
    <string name="details_title">Detail Reports</string>
    <string name="amount_payable">Amount payable</string>
    <string name="collect">Collect</string>
    <string name="today_s_report">Today\'s Reports</string>
    <string name="old_reports">Old Reports</string>
    <string name="today_s_collection">Today\'s Collection:</string>
    <string name="today_s_money_receipt">Today\'s Money Receipt:</string>
    <string name="not_paid_by_consumer">Not Paid By Consumer</string>
    <string name="select_date">Select Date</string>
    <string name="upload_pending_data">Upload pending data</string>
    <string name="uploaded_to_server">Uploaded</string>
    <string name="pending_in_offline">Pending</string>
    <string name="collection">Collection</string>
    <string name="reports">Reports</string>
    <string name="psetup">Printer Setup</string>
    <string name="ptest">Printer Test</string>
  <!--  <string name="accollection">Account Collection</string>
    <string name="advcollection">Advance Collection</string>-->
    <string name="accollection">Account\nCollection</string>
    <string name="noticollection">Notified\nCollection</string>
    <string name="unnoticollection">Unnotified\nCollection</string>
    <string name="advcollection">Advance\nCollection</string>
    <string name="sync">Sync</string>
    <string name="exit">Exit</string>
    <string name="back">Back</string>
    <string name="scan">Scan</string>
    <string name="print_receipt">Print Receipt</string>
    <string name="submit">Submit</string>
    <string name="generate_receipt">Generate Receipt</string>
    <string name="last_payment_date">Last Pymt Date :</string>
    <string name="last_payment_amt">Last Pymt. Amt. :</string>
    <string name="notice_board">Notice Board</string>
    <string name="energy_collection_dashboard">Energy Collection</string>
    <string name="non_energy_collection_dashboard">Non-Energy Collection</string>
    <string name="fetch_details">Fetch Details</string>
    <string name="download">Download\n Data</string>
    <string name="navigation">Navigation</string>
    <string name="locate">Locate</string>
    <string name="reprint">Reprint\nReceipt</string>
    <string name="proceed">Proceed</string>
    <string name="print">Print</string>
    <string name="search_here">Search name/consumer no.</string>
    <string name="no_result_found">No result found</string>
    <string name="name">Name</string>
    <string name="sc_number">SC No</string>
    <string name="upload_pending_data_ots">Upload OTS pending data</string>
    <string name="submit_now">Submit</string>
    <string name="title_activity_online_payment">OnlinePayment</string>

</resources>
